FIX: alt+shift+f

--- a/src/scss/styleComponents/routes/home/home.module.scss
+++ b/src/scss/styleComponents/routes/home/home.module.scss
@@ -1,28 +1,29 @@
 @use '../../../patterns/color.scss' as color;
 @use '../../../mixins/mixins.module.scss' as mixins;
 
-.sectionBg{
+.sectionBg {
     background-image: url('@assets/routes-img/bg.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-clip: border-box;
     height: 60vh;
-    @include mixins.flex($justify:start, $align: center);
+    @include mixins.flex($justify: start, $align: center);
 
-    h1{
+    h1 {
         color: color.$text-header;
         width: 30vw;
         text-align: left;
         margin-left: 5vw;
         font-weight: 700;
         //ANIMATION
-        background-image: linear-gradient(90deg,color.$text-header, color.$text-header);
+        background-image: linear-gradient(90deg, color.$text-header, color.$text-header);
         background-size: 0% .1rem;
         background-repeat: no-repeat;
         background-position: left bottom;
         transition: 300ms ease;
-        &:hover{
+
+        &:hover {
             background-size: 100% .1rem;
         }
     }
@@ -31,30 +32,46 @@
 
 //ESTILIZAÇÃO DA SEGUNDA SECTION
 
-.sectionCard{
+.sectionCard {
     @include mixins.flex($align: center, $justify: space-evenly);
     padding: 2rem;
 
-    .cardMap{
+    .cardMap {
         border-radius: 1rem;
         background-color: color.$bg-card;
         width: 20%;
         height: 40vh;
         @include mixins.flex($align: center, $justify: center, $direction: column, $gap: 1rem);
 
-        img{
+        img {
             width: 6vw;
         }
-        h3{
+
+        h3 {
             width: 80%;
             text-align: center;
             font-weight: 400;
         }
     }
 }
-.sectionH2{
+
+.sectionH2 {
     padding: 5rem;
     color: color.$text-h3;
     font-weight: 500;
-    @include mixins.flex($align: center, $justify: start)
+    @include mixins.flex($align: center, $justify: start);
+
+    //ANIMATION
+    h2 {
+        background-image: linear-gradient(90deg, color.$text-h3, color.$text-h3);
+        background-size: 0% .1rem;
+        background-repeat: no-repeat;
+        background-position: left bottom;
+        transition: 300ms ease;
+
+        &:hover {
+            background-size: 100% .1rem;
+        }
+    }
+
 }
